--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip intsall -r requirements.txt
+          pip install -r requirements.txt
     
       - name: Lint with flake8
         run: |
